committing resources updated in Trailhead module

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,9 +3,9 @@
   {
     "path": "force-app",
     "default": true,
-    "id": "YOUR_PACKAGE_ID",
-    "versionNumber": "1.0.0.NEXT",
-    "versionName": "Spring ‘18"
+    "id": "0Ho1r000000TN3LCAW",
+    "versionNumber": "1.1.0.NEXT",
+    "versionName": "Search GIPHY"
   }
   ],
   "namespace": "",
